--- a/Fluids.tex
+++ b/Fluids.tex
@@ -279,6 +279,8 @@ A continuacion se realizarian los mismos calculos pero con la masa de 300g sobre
 	\item El centro de flotación se ubica 4,68 cm desde el fondo del barco.
 	\item El centro de gravedad se ubica 3,45 cm desde el fondo del barco.
 	\item El Metacentro se ubica 5,09 cm desde el fondo del barco.
+	\end{itemize}
+		
 
 \section{Conclusiones}
 %contentsline{toc}{section}{Conclusiones}
